# SentinelAI

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  dependencies.py  errors.py  limiter.py  main.py
app/db/: database.py  transaction_repo.py
app/models/: db_models.py  schemas.py
app/modules/: __init__.py  logging_config.py
app/modules/auth/: __init__.py  dependencies.py
app/modules/rate_limit/: __init__.py  keys.py
app/monitoring/: drift_detector.py  performance_tracker.py
app/routers/: health.py  predict.py  transactions.py  websocket.py
app/services/: alert_service.py  explanation_service.py  feature_service.py  prediction_service.py
app/utils/: __init__.py  cold_start.py  ollama_client.py
dashboard/: app.py  demo_data.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  opengraph-image.tsx
frontend/src/components/: shell.tsx
frontend/src/lib/: api.ts  config.ts
ml/: __init__.py  evaluate.py  feature_engineering.py  train.py
ml/data/: README.md
scripts/: capture_dashboard_screenshot.py  capture_elite_dashboard_png.py  capture_portfolio_assets.py  capture_upwork_thumbnail.py  docker-entrypoint.sh  run-catalog.ps1  seed_demo_traffic.py
sentinelai/app/: __init__.py
sentinelai/app/models/: db_models.py  schemas.py
tests/: conftest.py  test_api.py  test_drift_psi.py
(+23 files in other folders)
