[project]
name = "sentinelai"
version = "1.0.0"
description = "Real-time fraud detection API"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "ml", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "UP", "B", "SIM",
]
ignore = [
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
packages = ["app"]
